Close the roadmap's Gradle gaps that need no spec decision
Every roadmap item that answers a Gradle feature and does not cross a
non-goal or add a crate, each as the single-module, declarative version
of what a Gradle build gets from a plugin or DSL block.

- Build: --timings on build, test, run and package reports each phase's
  wall time and writes target/.jrs/timings.txt; project.jrs-version stops
  an older jrs with exit 2 before any other key is read.
- Dependencies: runtime-only = true (a fourth lockfile classpath, with
  widening as the union of places a jar goes, and jrs add
  --runtime-only); local jars as { path = "libs/x.jar" }, pinned by
  sha256 in [[local]] blocks with no absolute path; repository groups,
  which confine a repository to the groups it serves, exclusively.
- Test and run JVMs: test.java-agents and run.java-agents by coordinate,
  from the resolved graph; test.env, run.env and run.cwd, reusing the
  tasks' parsing and placeholders; --debug[=port] on run and test.
- Test results: target/test-reports/index.html from the JUnit XML,
  --rerun-failed, --fail-fast (the launcher's own on JUnit 6, a live
  feed jrs stops on 1.10+), test.retries with flaky tests reported
  apart from passed ones, and test.coverage-minimum.
- Packaging: [package.manifest] attributes, --sources and --javadoc
  jars, a --dist zip with launch scripts, --native-image on a GraalVM
  JDK, and Spring's spring.factories, *.imports, handlers and schemas
  merged in the fat jar.
- Tooling: jrs metadata prints the project model as versioned JSON,
  written by hand; jrs fetch [--sources] fills the cache without
  building.

Where the features meet: a runtime-only dependency can be a run agent,
--dist launchers load run.java-agents from lib/ (and refuse --fat, as
images do), --fail-fast keeps test.env, and --debug turns retries off,
since each would wait for a debugger again.

Behaviour that changes for existing projects: jrs doc passes
-notimestamp, so the Javadoc jar is byte-